New DALL-E3 Thumbnails and center adjusted spacing

--- a/about.html
+++ b/about.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <!-- Image container -->
-        <div class="logo-container">
-            <a href="index.html"><img src="Images/RobotUserIcon.png" alt="logo" class="logo"/></a>  <!-- ensure you replace 'path_to_your_image.jpg' with your actual image file's path -->
-        </div>
+        <div class="header-content">
+            <!-- Image container -->
+            <div class="logo-container">
+                <a href="index.html"><img src="Images/RobotUserIcon.png" alt="logo" class="logo"/></a>  <!-- ensure you replace 'path_to_your_image.jpg' with your actual image file's path -->
+            </div>
 
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <!-- Continue with other links... -->
-            </ul>
-        </nav>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <!-- Continue with other links... -->
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section class="main-content">
