--- a/spacetime.html
+++ b/spacetime.html
@@ -28,7 +28,7 @@
     <main>
         <section class="main-content">
             <!-- Project Title -->
-            <h1 style="font-size:40px">Black Hole Renderer</h1> <!-- Replace with your project's name -->
+            <h1>Spacetime Simulator</h1> <!-- Replace with your project's name -->
 
             <!-- Short Description -->
 
